LU-114 use ll_lookup_one_len() instead of lookup_one_len() in sptlrpc_target_local_copy_conf() should lock the parent dir when doing lookup

Recent kernels print a warning when lookup_one_len() is called w/o the parent dir locked.
sptlrpc_target_local_copy_conf() should not call lookup_one_len() directly, but ll_lookup_one_len()
instead which locks the parent dir for you and also checks for bad inode.

Change-Id: I4d020c55382238bbbc6df6017f54b5b585f53c48
Signed-off-by: Johann Lombardi <johann@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/303
Tested-by: Hudson
Reviewed-by: Oleg Drokin <green@whamcloud.com>